[tool.poetry]
name = "testgit"
version = "0.1.0"
description = ""
authors = ["Викторов Андрей Германович <Viktorov.A.G@sberbank.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.0"
numpy = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
